# haskell-lexer

./: .gitignore  README.md  cabal.project  ddict-uebung.txt  lexer.cabal  test-input
app/: Main.hs
app/Simple/: Main.hs
app/Tokenizer/: Main.hs
src/: InitAutomatons.hi  InitAutomatons.hs  Main.hi  Main.hs
src/Core/: Tokenizer.hi  Tokenizer.hs  Utils.hi  Utils.hs
src/Core/Automaton/: Commons.hi  Commons.hs  Generator.hi  Generator.hs
src/Init/: Common.hs  InitAutomatons.hs
src/Init/Automatons/: CommentAutomaton.hs  ExactSequenceAutomatons.hs  IdentifierAutomaton.hs  StringAutomaton.hs
src/Init/Simple/: InitAutomaton.hs
src/Init/Tokenizer/: Common.hs  InitAutomatons.hs
src/Init/Tokenizer/Automatons/: CommentAutomaton.hs  ExactSequenceAutomatons.hs  IdentifierAutomaton.hs  StringAutomaton.hs
