cabal-version:      3.4
name:               lexer
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:
    Init.InitAutomatons
    Core.Tokenizer
  other-modules:
    Core.Automaton.Commons
    Core.Automaton.Generator
    Core.Utils
    Init.Automatons.ExactSequenceAutomatons
    Init.Automatons.IdentifierAutomaton
    Init.Automatons.StringAutomaton
    Init.Common
  build-depends:
    base >=4.3 && <5,
    Cabal-syntax
  default-language: Haskell2010
  ghc-options: -O2

executable lexer
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base >=4.3 && <5,
    lexer
  default-language: Haskell2010
  ghc-options:      -O2 -split-sections -optl -s
